--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, at qui? Cupiditate, et debitis, eos voluptatem omnis eligendi commodi porro praesentium nostrum modi recusandae! Magnam cupiditate id nostrum sapiente quasi. <br></p>
             <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quam facilis dolore eum provident odio nesciunt dolorem perspiciatis harum. Excepturi voluptates, animi eos repellat corporis culpa laboriosam obcaecati est assumenda? Lorem ipsum dolor sit amet consectetur adipisicing elit. A nemo tempora hic omnis reprehenderit? Error iste laudantium vel corrupti magni vitae ex, dolore fugit, autem eveniet consectetur officiis numquam illum. <br> 
-            <a href="#">Download CV</a> </p>
+            <a href="CV.pdf" download="Onke Nyathela's CV">Download CV</a> </p>
         </div>
     </div>
 </section>
